<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.ResidentesFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margen_small"
        android:padding="@dimen/margen_small"
        android:background="@drawable/marco_pregunta"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/texto_small"
            android:theme="@style/TemaTextoPregunta"
            android:text="@string/modulo_2_p202_pregunta_miembros"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/texto_small"
            android:layout_marginBottom="@dimen/margen_small"
            android:text="@string/modulo_2_p202_ind"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/margen_small"
            android:layout_marginBottom="@dimen/margen_small"
            android:background="@drawable/marco_pregunta">
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginRight="@dimen/margen_medium"
                android:text="TOTAL DE PERSONAS QUE VIVEN EN EL HOGAR"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/mod2_txtNumeroPersonas"
                android:layout_width="120dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:background="@drawable/input_text_enabled"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="@dimen/longitud_input_n"
                android:theme="@style/TemaCabeceraP309"
                android:text="@string/modulo_2_cab_nro"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:theme="@style/TemaCabeceraP309"
                android:text="@string/modulo_2_cab_nombre"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:theme="@style/TemaCabeceraP309"
                android:text="@string/modulo_2_cab_parentesco"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:theme="@style/TemaCabeceraP309"
                android:text="@string/modulo_2_cab_sexo"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:theme="@style/TemaCabeceraP309"
                android:text="@string/modulo_2_cab_edad"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:theme="@style/TemaCabeceraP309"
                android:text="@string/modulo_2_cab_estado_civil"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:theme="@style/TemaCabeceraP309"
                android:text="Cobertura"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/mod2_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/mod2_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                app:backgroundTint="@color/colorPrimary"
                android:layout_marginRight="@dimen/margen_small"
                android:layout_marginBottom="@dimen/margen_small"
                android:src="@drawable/ic_add"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>

