<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/margen_layout_pregunta"
    android:padding="@dimen/padding_layout_pregunta"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/marco_pregunta">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TemaTextoPregunta"
        android:text="@string/modulo_2_p204"/>
    <RadioGroup
        android:id="@+id/mod2_204_radiogroup_C2_P204"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margen_small"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <RadioButton
            android:id="@+id/mo2_204_rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margen_medium"
            android:text="@string/modulo_2_p204_sp1"/>
        <RadioButton
            android:id="@+id/mo2_204_rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modulo_2_p204_sp2"/>
    </RadioGroup>
</LinearLayout>