<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/item_hogar_cardview"
    android:layout_width="match_parent"
    android:layout_margin="1dp"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_height="48dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/item_hogar_textview_numero"
            android:layout_height="match_parent"
            android:layout_width="@dimen/longitud_input_n"
            android:gravity="center"
            android:text="@string/hogares_numero"/>
        <TextView
            android:id="@+id/item_hogar_textview_jefe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/hogares_jefe"/>
        <TextView
            android:id="@+id/item_hogar_textview_numero_viven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="3"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/item_hogar_textview_estado"
            android:gravity="center"
            android:text="@string/hogares_estado"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/item_hogar_textview_principal"
            android:gravity="center"
            android:text="PRINCIPAL"/>
    </LinearLayout>

</android.support.v7.widget.CardView>