<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.HogaresFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/texto_medium"
        android:textColor="@color/colorIcons"
        android:background="@color/colorPrimary"
        android:text="HOGARES"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margen_small"
        android:id="@+id/formulario_layout">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margen_small">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margen_small"
                android:gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/margen_small"
                    android:text="@string/caratula_n_hogares_ind"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/caratula_n_hogares"
                        android:textStyle="bold"
                        android:layout_marginRight="@dimen/margen_small"
                        android:textColor="@color/greyBluePrimary"/>
                    <TextView
                        android:id="@+id/hogares_textview_numero_hogares"
                        android:layout_width="@dimen/longitud_input_n_horas"
                        android:layout_height="@dimen/altura_input_especifique"
                        android:gravity="center"
                        android:background="@drawable/input_text_enabled"
                        />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:cardBackgroundColor="@color/greyBluePrimaryDark">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="@dimen/longitud_input_n"
                    android:theme="@style/TemaCabeceraVisitas"
                    android:text="@string/hogares_numero"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:theme="@style/TemaCabeceraVisitas"
                    android:text="@string/hogares_jefe"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:theme="@style/TemaCabeceraVisitas"
                    android:text="NRO PERSONAS"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:theme="@style/TemaCabeceraVisitas"
                    android:text="@string/hogares_estado"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:theme="@style/TemaCabeceraVisitas"
                    android:text="PRINCIPAL"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/hogares_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/hogares_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:tint="@color/colorIcons"
                app:backgroundTint="@color/greyBluePrimaryDark"
                android:src="@drawable/ic_add"
                />
        </RelativeLayout>


    </LinearLayout>
</LinearLayout>