<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/margen_small"
    android:background="@color/greyBluePrimary"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/caratula_ubicacion_muestral"
        android:textColor="@color/colorIcons"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/greyBluePrimaryDark"/>
    <LinearLayout
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/caratula_zona"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:textColor="@color/greyBluePrimary"
                    android:gravity="center_vertical"
                    />
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/greyBluePrimary"/>
                <TextView
                    android:id="@+id/caratula_textview_ZONA"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/caratula_n_manzana"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:textColor="@color/greyBluePrimary"
                    android:gravity="center_vertical"
                    />
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/greyBluePrimary"/>
                <TextView
                    android:id="@+id/caratula_textview_MANZANA_ID"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/caratula_n_vivienda"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:textColor="@color/greyBluePrimary"
                    android:gravity="center_vertical"
                    />
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/greyBluePrimary"/>
                <TextView
                    android:id="@+id/caratula_textview_VIVIENDA"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>