<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inei_fondo_app"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#771976D2">
        <android.support.v7.widget.CardView
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:background="@drawable/fondo_login"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/fondo_login_2"
                android:elevation="@dimen/margen_medium">
                <TextView
                    android:id="@+id/login_tvTituloEncuesta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TITULO ENCUESTA 2017"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:paddingTop="@dimen/margen_small"
                    android:paddingBottom="@dimen/margen_small"
                    android:textColor="@color/colorIcons"
                    android:textSize="@dimen/texto_medium"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/padding_medium"
                android:paddingBottom="@dimen/padding_medium"
                android:paddingRight="@dimen/padding_large"
                android:paddingLeft="@dimen/padding_large">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logoinei"
                    android:scaleType="fitCenter"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_small"
                    android:theme="@style/CajaInput">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/login_edtUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/texto_usuario"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/CajaInput"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/greyBluePrimary">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/login_edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/texto_password"/>
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:id="@+id/login_btIngresar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_ingresar"
                    android:layout_marginTop="15dp"
                    android:theme="@style/RaisedButtonDarkGray"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>